fix nav text wrap for low screen width

--- a/style.css
+++ b/style.css
@@ -232,6 +232,9 @@
 	#topsep {
 		display: block;
 	}
+	.nav a {
+		padding: 1rem 1.2rem;
+	}
 
 	/* Paper */
 	.paper_thumbnail {
